parser.output
Terminais não utilizados na gramática

   CHAR_LITERAL
   BREAK
   BYTE
   CASE
   CONTINUE
   DO
   ELSE
   ELSIF
   END_CASE
   END_FOR
   END_FUNCTION
   END_IF
   END_PROCEDURE
   END_WHILE
   FOR
   IF
   NNULL
   OP_PTR
   PRINT
   PRINTLN
   READ
   RETURN
   SIZEOF
   WHEN
   WHILE


Estado 95 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: translation_unit $end

    1 translation_unit: program_file

    2 program_file: declarations

    3 declarations: declaration
    4             | declarations declaration

    5 declaration: function_declaration
    6            | procedure_declaration
    7            | type_declaration
    8            | variable_declaration

    9 function_declaration: FUNCTION

   10 procedure_declaration: PROCEDURE

   11 type_declaration: STRUCT IDENTIFIER variable_declarations END_STRUCT
   12                 | UNION IDENTIFIER discriminant union_body END_UNION
   13                 | ENUM IDENTIFIER enumerator_list END_ENUM

   14 variable_declarations: variable_declaration
   15                      | variable_declarations variable_declaration

   16 variable_declaration: modifiers type_specifier variable_declarators SEMICOLON
   17                     | type_specifier variable_declarators SEMICOLON

   18 modifiers: modifier
   19          | modifiers modifier

   20 modifier: CONST
   21         | STATIC

   22 type_specifier: type_name

   23 type_name: primitive_type
   24          | qualified_name

   25 primitive_type: AUTO
   26               | BOOL
   27               | CHAR
   28               | DOUBLE
   29               | FLOAT
   30               | INT
   31               | LONG
   32               | SHORT
   33               | STRING

   34 discriminant: %empty

   35 enumerator_list: enumerator
   36                | enumerator_list COMMA enumerator

   37 enumerator: IDENTIFIER ASSIGN expression
   38           | IDENTIFIER

   39 qualified_name: IDENTIFIER

   40 union_body: %empty

   41 variable_declarators: variable_declarator
   42                     | variable_declarators COMMA variable_declarator

   43 variable_declarator: declarator_name
   44                    | declarator_name ASSIGN variable_initializer

   45 declarator_name: IDENTIFIER
   46                | declarator_name L_SQ_PAREN expression R_SQ_PAREN

   47 variable_initializer: expression
   48                     | L_BRACE R_BRACE
   49                     | L_BRACE array_initializers R_BRACE

   50 array_initializers: variable_initializer
   51                   | array_initializers COMMA variable_initializer
   52                   | array_initializers COMMA

   53 expression: assignment_expression

   54 assignment_expression: conditional_or_expression
   55                      | unary_expression assignment_operator assignment_expression

   56 unary_expression: arithmetic_unary_operator cast_expression
   57                 | logical_unary_expression

   58 logical_unary_expression: postfix_expression
   59                         | logical_unary_operator unary_expression

   60 postfix_expression: primary_expression

   61 primary_expression: qualified_name
   62                   | not_just_name

   63 arithmetic_unary_operator: OP_PLUS
   64                          | OP_MINUS

   65 logical_unary_operator: BITWISE_COMPLEMENT
   66                       | LOG_NOT

   67 conditional_or_expression: conditional_and_expression
   68                          | conditional_or_expression LOG_OR conditional_and_expression
   69                          | conditional_or_expression LOG_SC_OR conditional_and_expression

   70 conditional_and_expression: inclusive_or_expression
   71                           | conditional_and_expression LOG_AND inclusive_or_expression
   72                           | conditional_and_expression LOG_SC_AND inclusive_or_expression

   73 inclusive_or_expression: exclusive_or_expression
   74                        | inclusive_or_expression BITWISE_OR exclusive_or_expression

   75 exclusive_or_expression: and_expression
   76                        | exclusive_or_expression BITWISE_OR_EXC and_expression

   77 and_expression: equality_expression
   78               | and_expression AMPERSAND equality_expression

   79 equality_expression: relational_expression
   80                    | equality_expression OP_EQ relational_expression
   81                    | equality_expression OP_NE relational_expression

   82 relational_expression: shift_expression
   83                      | relational_expression OP_LT shift_expression
   84                      | relational_expression OP_GT shift_expression
   85                      | relational_expression OP_LET shift_expression
   86                      | relational_expression OP_GET shift_expression
   87                      | relational_expression TYPEOF type_specifier

   88 shift_expression: additive_expression
   89                 | shift_expression L_SHIFT additive_expression
   90                 | shift_expression R_SHIFT additive_expression

   91 additive_expression: multiplicative_expression
   92                    | additive_expression OP_PLUS multiplicative_expression
   93                    | additive_expression OP_MINUS multiplicative_expression

   94 multiplicative_expression: cast_expression
   95                          | multiplicative_expression OP_ASTERISK cast_expression
   96                          | multiplicative_expression OP_DIV cast_expression
   97                          | multiplicative_expression OP_MOD cast_expression

   98 cast_expression: unary_expression
   99                | L_PAREN primitive_type_expression R_PAREN cast_expression
  100                | L_PAREN user_type_expression R_PAREN cast_expression
  101                | L_PAREN expression R_PAREN logical_unary_expression

  102 primitive_type_expression: primitive_type
  103                          | primitive_type dims

  104 user_type_expression: qualified_name dims

  105 assignment_operator: ASSIGN
  106                    | ASSIGN_PLUS
  107                    | ASSIGN_MINUS
  108                    | ASSIGN_PRODUCT
  109                    | ASSIGN_DIV
  110                    | ASSIGN_MOD
  111                    | ASSIGN_BITWISE_AND
  112                    | ASSIGN_BITWISE_OR
  113                    | ASSIGN_BITWISE_OR_EXC
  114                    | ASSIGN_L_SHIFT
  115                    | ASSIGN_R_SHIFT

  116 not_just_name: complex_primary

  117 complex_primary: L_PAREN expression R_PAREN
  118                | complex_primary_no_parenthesis

  119 complex_primary_no_parenthesis: BOOL_LITERAL
  120                               | OCTAL
  121                               | DECIMAL
  122                               | HEX
  123                               | FLOATING_POINT
  124                               | STRING_LITERAL
  125                               | array_access
  126                               | field_access
  127                               | subprogram_call

  128 array_access: qualified_name L_SQ_PAREN expression R_SQ_PAREN
  129             | complex_primary L_SQ_PAREN expression R_SQ_PAREN

  130 field_access: not_just_name DOT IDENTIFIER
  131             | postfix_expression DOT IDENTIFIER

  132 subprogram_call: subprogram_access L_PAREN argument_list R_PAREN
  133                | subprogram_access L_PAREN R_PAREN

  134 subprogram_access: complex_primary_no_parenthesis
  135                  | qualified_name

  136 argument_list: expression
  137              | argument_list COMMA expression

  138 dims: L_SQ_PAREN R_SQ_PAREN
  139     | dims L_SQ_PAREN R_SQ_PAREN


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
IDENTIFIER (258) 11 12 13 37 38 39 45 130 131
STRING_LITERAL (259) 124
DECIMAL (260) 121
HEX (261) 122
OCTAL (262) 120
FLOATING_POINT (263) 123
BOOL_LITERAL (264) 119
CHAR_LITERAL (265)
ASSIGN (266) 37 44 105
ASSIGN_PLUS (267) 106
ASSIGN_MINUS (268) 107
ASSIGN_PRODUCT (269) 108
ASSIGN_DIV (270) 109
ASSIGN_MOD (271) 110
ASSIGN_BITWISE_AND (272) 111
ASSIGN_BITWISE_OR (273) 112
ASSIGN_BITWISE_OR_EXC (274) 113
ASSIGN_L_SHIFT (275) 114
ASSIGN_R_SHIFT (276) 115
AMPERSAND (277) 78
AUTO (278) 25
BOOL (279) 26
BREAK (280)
BYTE (281)
BITWISE_COMPLEMENT (282) 65
BITWISE_OR (283) 74
BITWISE_OR_EXC (284) 76
CASE (285)
CHAR (286) 27
COMMA (287) 36 42 51 52 137
CONTINUE (288)
CONST (289) 20
DO (290)
DOT (291) 130 131
DOUBLE (292) 28
ENUM (293) 13
ELSE (294)
ELSIF (295)
END_CASE (296)
END_ENUM (297) 13
END_FOR (298)
END_FUNCTION (299)
END_IF (300)
END_PROCEDURE (301)
END_STRUCT (302) 11
END_UNION (303) 12
END_WHILE (304)
FLOAT (305) 29
FOR (306)
FUNCTION (307) 9
IF (308)
INT (309) 30
L_PAREN (310) 99 100 101 117 132 133
L_SQ_PAREN (311) 46 128 129 138 139
L_BRACE (312) 48 49
L_SHIFT (313) 89
LOG_NOT (314) 66
LOG_AND (315) 71
LOG_OR (316) 68
LOG_SC_AND (317) 72
LOG_SC_OR (318) 69
LONG (319) 31
NNULL (320)
OP_EQ (321) 80
OP_NE (322) 81
OP_PTR (323)
OP_PLUS (324) 63 92
OP_MINUS (325) 64 93
OP_ASTERISK (326) 95
OP_DIV (327) 96
OP_MOD (328) 97
OP_LET (329) 85
OP_LT (330) 83
OP_GET (331) 86
OP_GT (332) 84
PRINT (333)
PRINTLN (334)
PROCEDURE (335) 10
READ (336)
RETURN (337)
R_PAREN (338) 99 100 101 117 132 133
R_SQ_PAREN (339) 46 128 129 138 139
R_BRACE (340) 48 49
R_SHIFT (341) 90
SHORT (342) 32
STRING (343) 33
STRUCT (344) 11
STATIC (345) 21
SIZEOF (346)
SEMICOLON (347) 16 17
TYPEOF (348) 87
UNION (349) 12
WHEN (350)
WHILE (351)


Não-terminais com as regras onde eles aparecem

$accept (97)
    à esquerda: 0
translation_unit (98)
    à esquerda: 1, à direita: 0
program_file (99)
    à esquerda: 2, à direita: 1
declarations (100)
    à esquerda: 3 4, à direita: 2 4
declaration (101)
    à esquerda: 5 6 7 8, à direita: 3 4
function_declaration (102)
    à esquerda: 9, à direita: 5
procedure_declaration (103)
    à esquerda: 10, à direita: 6
type_declaration (104)
    à esquerda: 11 12 13, à direita: 7
variable_declarations (105)
    à esquerda: 14 15, à direita: 11 15
variable_declaration (106)
    à esquerda: 16 17, à direita: 8 14 15
modifiers (107)
    à esquerda: 18 19, à direita: 16 19
modifier (108)
    à esquerda: 20 21, à direita: 18 19
type_specifier (109)
    à esquerda: 22, à direita: 16 17 87
type_name (110)
    à esquerda: 23 24, à direita: 22
primitive_type (111)
    à esquerda: 25 26 27 28 29 30 31 32 33, à direita: 23 102 103
discriminant (112)
    à esquerda: 34, à direita: 12
enumerator_list (113)
    à esquerda: 35 36, à direita: 13 36
enumerator (114)
    à esquerda: 37 38, à direita: 35 36
qualified_name (115)
    à esquerda: 39, à direita: 24 61 104 128 135
union_body (116)
    à esquerda: 40, à direita: 12
variable_declarators (117)
    à esquerda: 41 42, à direita: 16 17 42
variable_declarator (118)
    à esquerda: 43 44, à direita: 41 42
declarator_name (119)
    à esquerda: 45 46, à direita: 43 44 46
variable_initializer (120)
    à esquerda: 47 48 49, à direita: 44 50 51
array_initializers (121)
    à esquerda: 50 51 52, à direita: 49 51 52
expression (122)
    à esquerda: 53, à direita: 37 46 47 101 117 128 129 136 137
assignment_expression (123)
    à esquerda: 54 55, à direita: 53 55
unary_expression (124)
    à esquerda: 56 57, à direita: 55 59 98
logical_unary_expression (125)
    à esquerda: 58 59, à direita: 57 101
postfix_expression (126)
    à esquerda: 60, à direita: 58 131
primary_expression (127)
    à esquerda: 61 62, à direita: 60
arithmetic_unary_operator (128)
    à esquerda: 63 64, à direita: 56
logical_unary_operator (129)
    à esquerda: 65 66, à direita: 59
conditional_or_expression (130)
    à esquerda: 67 68 69, à direita: 54 68 69
conditional_and_expression (131)
    à esquerda: 70 71 72, à direita: 67 68 69 71 72
inclusive_or_expression (132)
    à esquerda: 73 74, à direita: 70 71 72 74
exclusive_or_expression (133)
    à esquerda: 75 76, à direita: 73 74 76
and_expression (134)
    à esquerda: 77 78, à direita: 75 76 78
equality_expression (135)
    à esquerda: 79 80 81, à direita: 77 78 80 81
relational_expression (136)
    à esquerda: 82 83 84 85 86 87, à direita: 79 80 81 83 84 85 86
    87
shift_expression (137)
    à esquerda: 88 89 90, à direita: 82 83 84 85 86 89 90
additive_expression (138)
    à esquerda: 91 92 93, à direita: 88 89 90 92 93
multiplicative_expression (139)
    à esquerda: 94 95 96 97, à direita: 91 92 93 95 96 97
cast_expression (140)
    à esquerda: 98 99 100 101, à direita: 56 94 95 96 97 99 100
primitive_type_expression (141)
    à esquerda: 102 103, à direita: 99
user_type_expression (142)
    à esquerda: 104, à direita: 100
assignment_operator (143)
    à esquerda: 105 106 107 108 109 110 111 112 113 114 115, à direita:
    55
not_just_name (144)
    à esquerda: 116, à direita: 62 130
complex_primary (145)
    à esquerda: 117 118, à direita: 116 129
complex_primary_no_parenthesis (146)
    à esquerda: 119 120 121 122 123 124 125 126 127, à direita: 118
    134
array_access (147)
    à esquerda: 128 129, à direita: 125
field_access (148)
    à esquerda: 130 131, à direita: 126
subprogram_call (149)
    à esquerda: 132 133, à direita: 127
subprogram_access (150)
    à esquerda: 134 135, à direita: 132 133
argument_list (151)
    à esquerda: 136 137, à direita: 132 137
dims (152)
    à esquerda: 138 139, à direita: 103 104 139


State 0

    0 $accept: . translation_unit $end
    1 translation_unit: . program_file
    2 program_file: . declarations
    3 declarations: . declaration
    4             | . declarations declaration
    5 declaration: . function_declaration
    6            | . procedure_declaration
    7            | . type_declaration
    8            | . variable_declaration
    9 function_declaration: . FUNCTION
   10 procedure_declaration: . PROCEDURE
   11 type_declaration: . STRUCT IDENTIFIER variable_declarations END_STRUCT
   12                 | . UNION IDENTIFIER discriminant union_body END_UNION
   13                 | . ENUM IDENTIFIER enumerator_list END_ENUM
   16 variable_declaration: . modifiers type_specifier variable_declarators SEMICOLON
   17                     | . type_specifier variable_declarators SEMICOLON
   18 modifiers: . modifier
   19          | . modifiers modifier
   20 modifier: . CONST
   21         | . STATIC
   22 type_specifier: . type_name
   23 type_name: . primitive_type
   24          | . qualified_name
   25 primitive_type: . AUTO
   26               | . BOOL
   27               | . CHAR
   28               | . DOUBLE
   29               | . FLOAT
   30               | . INT
   31               | . LONG
   32               | . SHORT
   33               | . STRING
   39 qualified_name: . IDENTIFIER

    IDENTIFIER  deslocar, e ir ao estado 1
    AUTO        deslocar, e ir ao estado 2
    BOOL        deslocar, e ir ao estado 3
    CHAR        deslocar, e ir ao estado 4
    CONST       deslocar, e ir ao estado 5
    DOUBLE      deslocar, e ir ao estado 6
    ENUM        deslocar, e ir ao estado 7
    FLOAT       deslocar, e ir ao estado 8
    FUNCTION    deslocar, e ir ao estado 9
    INT         deslocar, e ir ao estado 10
    LONG        deslocar, e ir ao estado 11
    PROCEDURE   deslocar, e ir ao estado 12
    SHORT       deslocar, e ir ao estado 13
    STRING      deslocar, e ir ao estado 14
    STRUCT      deslocar, e ir ao estado 15
    STATIC      deslocar, e ir ao estado 16
    UNION       deslocar, e ir ao estado 17

    translation_unit       ir ao estado 18
    program_file           ir ao estado 19
    declarations           ir ao estado 20
    declaration            ir ao estado 21
    function_declaration   ir ao estado 22
    procedure_declaration  ir ao estado 23
    type_declaration       ir ao estado 24
    variable_declaration   ir ao estado 25
    modifiers              ir ao estado 26
    modifier               ir ao estado 27
    type_specifier         ir ao estado 28
    type_name              ir ao estado 29
    primitive_type         ir ao estado 30
    qualified_name         ir ao estado 31


State 1

   39 qualified_name: IDENTIFIER .

    $padrão  reduzir usando a regra 39 (qualified_name)


State 2

   25 primitive_type: AUTO .

    $padrão  reduzir usando a regra 25 (primitive_type)


State 3

   26 primitive_type: BOOL .

    $padrão  reduzir usando a regra 26 (primitive_type)


State 4

   27 primitive_type: CHAR .

    $padrão  reduzir usando a regra 27 (primitive_type)


State 5

   20 modifier: CONST .

    $padrão  reduzir usando a regra 20 (modifier)


State 6

   28 primitive_type: DOUBLE .

    $padrão  reduzir usando a regra 28 (primitive_type)


State 7

   13 type_declaration: ENUM . IDENTIFIER enumerator_list END_ENUM

    IDENTIFIER  deslocar, e ir ao estado 32


State 8

   29 primitive_type: FLOAT .

    $padrão  reduzir usando a regra 29 (primitive_type)


State 9

    9 function_declaration: FUNCTION .

    $padrão  reduzir usando a regra 9 (function_declaration)


State 10

   30 primitive_type: INT .

    $padrão  reduzir usando a regra 30 (primitive_type)


State 11

   31 primitive_type: LONG .

    $padrão  reduzir usando a regra 31 (primitive_type)


State 12

   10 procedure_declaration: PROCEDURE .

    $padrão  reduzir usando a regra 10 (procedure_declaration)


State 13

   32 primitive_type: SHORT .

    $padrão  reduzir usando a regra 32 (primitive_type)


State 14

   33 primitive_type: STRING .

    $padrão  reduzir usando a regra 33 (primitive_type)


State 15

   11 type_declaration: STRUCT . IDENTIFIER variable_declarations END_STRUCT

    IDENTIFIER  deslocar, e ir ao estado 33


State 16

   21 modifier: STATIC .

    $padrão  reduzir usando a regra 21 (modifier)


State 17

   12 type_declaration: UNION . IDENTIFIER discriminant union_body END_UNION

    IDENTIFIER  deslocar, e ir ao estado 34


State 18

    0 $accept: translation_unit . $end

    $end  deslocar, e ir ao estado 35


State 19

    1 translation_unit: program_file .

    $padrão  reduzir usando a regra 1 (translation_unit)


State 20

    2 program_file: declarations .  [$end]
    4 declarations: declarations . declaration
    5 declaration: . function_declaration
    6            | . procedure_declaration
    7            | . type_declaration
    8            | . variable_declaration
    9 function_declaration: . FUNCTION
   10 procedure_declaration: . PROCEDURE
   11 type_declaration: . STRUCT IDENTIFIER variable_declarations END_STRUCT
   12                 | . UNION IDENTIFIER discriminant union_body END_UNION
   13                 | . ENUM IDENTIFIER enumerator_list END_ENUM
   16 variable_declaration: . modifiers type_specifier variable_declarators SEMICOLON
   17                     | . type_specifier variable_declarators SEMICOLON
   18 modifiers: . modifier
   19          | . modifiers modifier
   20 modifier: . CONST
   21         | . STATIC
   22 type_specifier: . type_name
   23 type_name: . primitive_type
   24          | . qualified_name
   25 primitive_type: . AUTO
   26               | . BOOL
   27               | . CHAR
   28               | . DOUBLE
   29               | . FLOAT
   30               | . INT
   31               | . LONG
   32               | . SHORT
   33               | . STRING
   39 qualified_name: . IDENTIFIER

    IDENTIFIER  deslocar, e ir ao estado 1
    AUTO        deslocar, e ir ao estado 2
    BOOL        deslocar, e ir ao estado 3
    CHAR        deslocar, e ir ao estado 4
    CONST       deslocar, e ir ao estado 5
    DOUBLE      deslocar, e ir ao estado 6
    ENUM        deslocar, e ir ao estado 7
    FLOAT       deslocar, e ir ao estado 8
    FUNCTION    deslocar, e ir ao estado 9
    INT         deslocar, e ir ao estado 10
    LONG        deslocar, e ir ao estado 11
    PROCEDURE   deslocar, e ir ao estado 12
    SHORT       deslocar, e ir ao estado 13
    STRING      deslocar, e ir ao estado 14
    STRUCT      deslocar, e ir ao estado 15
    STATIC      deslocar, e ir ao estado 16
    UNION       deslocar, e ir ao estado 17

    $padrão  reduzir usando a regra 2 (program_file)

    declaration            ir ao estado 36
    function_declaration   ir ao estado 22
    procedure_declaration  ir ao estado 23
    type_declaration       ir ao estado 24
    variable_declaration   ir ao estado 25
    modifiers              ir ao estado 26
    modifier               ir ao estado 27
    type_specifier         ir ao estado 28
    type_name              ir ao estado 29
    primitive_type         ir ao estado 30
    qualified_name         ir ao estado 31


State 21

    3 declarations: declaration .

    $padrão  reduzir usando a regra 3 (declarations)


State 22

    5 declaration: function_declaration .

    $padrão  reduzir usando a regra 5 (declaration)


State 23

    6 declaration: procedure_declaration .

    $padrão  reduzir usando a regra 6 (declaration)


State 24

    7 declaration: type_declaration .

    $padrão  reduzir usando a regra 7 (declaration)


State 25

    8 declaration: variable_declaration .

    $padrão  reduzir usando a regra 8 (declaration)


State 26

   16 variable_declaration: modifiers . type_specifier variable_declarators SEMICOLON
   19 modifiers: modifiers . modifier
   20 modifier: . CONST
   21         | . STATIC
   22 type_specifier: . type_name
   23 type_name: . primitive_type
   24          | . qualified_name
   25 primitive_type: . AUTO
   26               | . BOOL
   27               | . CHAR
   28               | . DOUBLE
   29               | . FLOAT
   30               | . INT
   31               | . LONG
   32               | . SHORT
   33               | . STRING
   39 qualified_name: . IDENTIFIER

    IDENTIFIER  deslocar, e ir ao estado 1
    AUTO        deslocar, e ir ao estado 2
    BOOL        deslocar, e ir ao estado 3
    CHAR        deslocar, e ir ao estado 4
    CONST       deslocar, e ir ao estado 5
    DOUBLE      deslocar, e ir ao estado 6
    FLOAT       deslocar, e ir ao estado 8
    INT         deslocar, e ir ao estado 10
    LONG        deslocar, e ir ao estado 11
    SHORT       deslocar, e ir ao estado 13
    STRING      deslocar, e ir ao estado 14
    STATIC      deslocar, e ir ao estado 16

    modifier        ir ao estado 37
    type_specifier  ir ao estado 38
    type_name       ir ao estado 29
    primitive_type  ir ao estado 30
    qualified_name  ir ao estado 31


State 27

   18 modifiers: modifier .

    $padrão  reduzir usando a regra 18 (modifiers)


State 28

   17 variable_declaration: type_specifier . variable_declarators SEMICOLON
   41 variable_declarators: . variable_declarator
   42                     | . variable_declarators COMMA variable_declarator
   43 variable_declarator: . declarator_name
   44                    | . declarator_name ASSIGN variable_initializer
   45 declarator_name: . IDENTIFIER
   46                | . declarator_name L_SQ_PAREN expression R_SQ_PAREN

    IDENTIFIER  deslocar, e ir ao estado 39

    variable_declarators  ir ao estado 40
    variable_declarator   ir ao estado 41
    declarator_name       ir ao estado 42


State 29

   22 type_specifier: type_name .

    $padrão  reduzir usando a regra 22 (type_specifier)


State 30

   23 type_name: primitive_type .

    $padrão  reduzir usando a regra 23 (type_name)


State 31

   24 type_name: qualified_name .

    $padrão  reduzir usando a regra 24 (type_name)


State 32

   13 type_declaration: ENUM IDENTIFIER . enumerator_list END_ENUM
   35 enumerator_list: . enumerator
   36                | . enumerator_list COMMA enumerator
   37 enumerator: . IDENTIFIER ASSIGN expression
   38           | . IDENTIFIER

    IDENTIFIER  deslocar, e ir ao estado 43

    enumerator_list  ir ao estado 44
    enumerator       ir ao estado 45


State 33

   11 type_declaration: STRUCT IDENTIFIER . variable_declarations END_STRUCT
   14 variable_declarations: . variable_declaration
   15                      | . variable_declarations variable_declaration
   16 variable_declaration: . modifiers type_specifier variable_declarators SEMICOLON
   17                     | . type_specifier variable_declarators SEMICOLON
   18 modifiers: . modifier
   19          | . modifiers modifier
   20 modifier: . CONST
   21         | . STATIC
   22 type_specifier: . type_name
   23 type_name: . primitive_type
   24          | . qualified_name
   25 primitive_type: . AUTO
   26               | . BOOL
   27               | . CHAR
   28               | . DOUBLE
   29               | . FLOAT
   30               | . INT
   31               | . LONG
   32               | . SHORT
   33               | . STRING
   39 qualified_name: . IDENTIFIER

    IDENTIFIER  deslocar, e ir ao estado 1
    AUTO        deslocar, e ir ao estado 2
    BOOL        deslocar, e ir ao estado 3
    CHAR        deslocar, e ir ao estado 4
    CONST       deslocar, e ir ao estado 5
    DOUBLE      deslocar, e ir ao estado 6
    FLOAT       deslocar, e ir ao estado 8
    INT         deslocar, e ir ao estado 10
    LONG        deslocar, e ir ao estado 11
    SHORT       deslocar, e ir ao estado 13
    STRING      deslocar, e ir ao estado 14
    STATIC      deslocar, e ir ao estado 16

    variable_declarations  ir ao estado 46
    variable_declaration   ir ao estado 47
    modifiers              ir ao estado 26
    modifier               ir ao estado 27
    type_specifier         ir ao estado 28
    type_name              ir ao estado 29
    primitive_type         ir ao estado 30
    qualified_name         ir ao estado 31


State 34

   12 type_declaration: UNION IDENTIFIER . discriminant union_body END_UNION
   34 discriminant: . %empty

    $padrão  reduzir usando a regra 34 (discriminant)

    discriminant  ir ao estado 48


State 35

    0 $accept: translation_unit $end .

    $padrão  aceitar


State 36

    4 declarations: declarations declaration .

    $padrão  reduzir usando a regra 4 (declarations)


State 37

   19 modifiers: modifiers modifier .

    $padrão  reduzir usando a regra 19 (modifiers)


State 38

   16 variable_declaration: modifiers type_specifier . variable_declarators SEMICOLON
   41 variable_declarators: . variable_declarator
   42                     | . variable_declarators COMMA variable_declarator
   43 variable_declarator: . declarator_name
   44                    | . declarator_name ASSIGN variable_initializer
   45 declarator_name: . IDENTIFIER
   46                | . declarator_name L_SQ_PAREN expression R_SQ_PAREN

    IDENTIFIER  deslocar, e ir ao estado 39

    variable_declarators  ir ao estado 49
    variable_declarator   ir ao estado 41
    declarator_name       ir ao estado 42


State 39

   45 declarator_name: IDENTIFIER .

    $padrão  reduzir usando a regra 45 (declarator_name)


State 40

   17 variable_declaration: type_specifier variable_declarators . SEMICOLON
   42 variable_declarators: variable_declarators . COMMA variable_declarator

    COMMA      deslocar, e ir ao estado 50
    SEMICOLON  deslocar, e ir ao estado 51


State 41

   41 variable_declarators: variable_declarator .

    $padrão  reduzir usando a regra 41 (variable_declarators)


State 42

   43 variable_declarator: declarator_name .  [COMMA, SEMICOLON]
   44                    | declarator_name . ASSIGN variable_initializer
   46 declarator_name: declarator_name . L_SQ_PAREN expression R_SQ_PAREN

    ASSIGN      deslocar, e ir ao estado 52
    L_SQ_PAREN  deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 43 (variable_declarator)


State 43

   37 enumerator: IDENTIFIER . ASSIGN expression
   38           | IDENTIFIER .  [COMMA, END_ENUM]

    ASSIGN  deslocar, e ir ao estado 54

    $padrão  reduzir usando a regra 38 (enumerator)


State 44

   13 type_declaration: ENUM IDENTIFIER enumerator_list . END_ENUM
   36 enumerator_list: enumerator_list . COMMA enumerator

    COMMA     deslocar, e ir ao estado 55
    END_ENUM  deslocar, e ir ao estado 56


State 45

   35 enumerator_list: enumerator .

    $padrão  reduzir usando a regra 35 (enumerator_list)


State 46

   11 type_declaration: STRUCT IDENTIFIER variable_declarations . END_STRUCT
   15 variable_declarations: variable_declarations . variable_declaration
   16 variable_declaration: . modifiers type_specifier variable_declarators SEMICOLON
   17                     | . type_specifier variable_declarators SEMICOLON
   18 modifiers: . modifier
   19          | . modifiers modifier
   20 modifier: . CONST
   21         | . STATIC
   22 type_specifier: . type_name
   23 type_name: . primitive_type
   24          | . qualified_name
   25 primitive_type: . AUTO
   26               | . BOOL
   27               | . CHAR
   28               | . DOUBLE
   29               | . FLOAT
   30               | . INT
   31               | . LONG
   32               | . SHORT
   33               | . STRING
   39 qualified_name: . IDENTIFIER

    IDENTIFIER  deslocar, e ir ao estado 1
    AUTO        deslocar, e ir ao estado 2
    BOOL        deslocar, e ir ao estado 3
    CHAR        deslocar, e ir ao estado 4
    CONST       deslocar, e ir ao estado 5
    DOUBLE      deslocar, e ir ao estado 6
    END_STRUCT  deslocar, e ir ao estado 57
    FLOAT       deslocar, e ir ao estado 8
    INT         deslocar, e ir ao estado 10
    LONG        deslocar, e ir ao estado 11
    SHORT       deslocar, e ir ao estado 13
    STRING      deslocar, e ir ao estado 14
    STATIC      deslocar, e ir ao estado 16

    variable_declaration  ir ao estado 58
    modifiers             ir ao estado 26
    modifier              ir ao estado 27
    type_specifier        ir ao estado 28
    type_name             ir ao estado 29
    primitive_type        ir ao estado 30
    qualified_name        ir ao estado 31


State 47

   14 variable_declarations: variable_declaration .

    $padrão  reduzir usando a regra 14 (variable_declarations)


State 48

   12 type_declaration: UNION IDENTIFIER discriminant . union_body END_UNION
   40 union_body: . %empty

    $padrão  reduzir usando a regra 40 (union_body)

    union_body  ir ao estado 59


State 49

   16 variable_declaration: modifiers type_specifier variable_declarators . SEMICOLON
   42 variable_declarators: variable_declarators . COMMA variable_declarator

    COMMA      deslocar, e ir ao estado 50
    SEMICOLON  deslocar, e ir ao estado 60


State 50

   42 variable_declarators: variable_declarators COMMA . variable_declarator
   43 variable_declarator: . declarator_name
   44                    | . declarator_name ASSIGN variable_initializer
   45 declarator_name: . IDENTIFIER
   46                | . declarator_name L_SQ_PAREN expression R_SQ_PAREN

    IDENTIFIER  deslocar, e ir ao estado 39

    variable_declarator  ir ao estado 61
    declarator_name      ir ao estado 42


State 51

   17 variable_declaration: type_specifier variable_declarators SEMICOLON .

    $padrão  reduzir usando a regra 17 (variable_declaration)


State 52

   39 qualified_name: . IDENTIFIER
   44 variable_declarator: declarator_name ASSIGN . variable_initializer
   47 variable_initializer: . expression
   48                     | . L_BRACE R_BRACE
   49                     | . L_BRACE array_initializers R_BRACE
   53 expression: . assignment_expression
   54 assignment_expression: . conditional_or_expression
   55                      | . unary_expression assignment_operator assignment_expression
   56 unary_expression: . arithmetic_unary_operator cast_expression
   57                 | . logical_unary_expression
   58 logical_unary_expression: . postfix_expression
   59                         | . logical_unary_operator unary_expression
   60 postfix_expression: . primary_expression
   61 primary_expression: . qualified_name
   62                   | . not_just_name
   63 arithmetic_unary_operator: . OP_PLUS
   64                          | . OP_MINUS
   65 logical_unary_operator: . BITWISE_COMPLEMENT
   66                       | . LOG_NOT
   67 conditional_or_expression: . conditional_and_expression
   68                          | . conditional_or_expression LOG_OR conditional_and_expression
   69                          | . conditional_or_expression LOG_SC_OR conditional_and_expression
   70 conditional_and_expression: . inclusive_or_expression
   71                           | . conditional_and_expression LOG_AND inclusive_or_expression
   72                           | . conditional_and_expression LOG_SC_AND inclusive_or_expression
   73 inclusive_or_expression: . exclusive_or_expression
   74                        | . inclusive_or_expression BITWISE_OR exclusive_or_expression
   75 exclusive_or_expression: . and_expression
   76                        | . exclusive_or_expression BITWISE_OR_EXC and_expression
   77 and_expression: . equality_expression
   78               | . and_expression AMPERSAND equality_expression
   79 equality_expression: . relational_expression
   80                    | . equality_expression OP_EQ relational_expression
   81                    | . equality_expression OP_NE relational_expression
   82 relational_expression: . shift_expression
   83                      | . relational_expression OP_LT shift_expression
   84                      | . relational_expression OP_GT shift_expression
   85                      | . relational_expression OP_LET shift_expression
   86                      | . relational_expression OP_GET shift_expression
   87                      | . relational_expression TYPEOF type_specifier
   88 shift_expression: . additive_expression
   89                 | . shift_expression L_SHIFT additive_expression
   90                 | . shift_expression R_SHIFT additive_expression
   91 additive_expression: . multiplicative_expression
   92                    | . additive_expression OP_PLUS multiplicative_expression
   93                    | . additive_expression OP_MINUS multiplicative_expression
   94 multiplicative_expression: . cast_expression
   95                          | . multiplicative_expression OP_ASTERISK cast_expression
   96                          | . multiplicative_expression OP_DIV cast_expression
   97                          | . multiplicative_expression OP_MOD cast_expression
   98 cast_expression: . unary_expression
   99                | . L_PAREN primitive_type_expression R_PAREN cast_expression
  100                | . L_PAREN user_type_expression R_PAREN cast_expression
  101                | . L_PAREN expression R_PAREN logical_unary_expression
  116 not_just_name: . complex_primary
  117 complex_primary: . L_PAREN expression R_PAREN
  118                | . complex_primary_no_parenthesis
  119 complex_primary_no_parenthesis: . BOOL_LITERAL
  120                               | . OCTAL
  121                               | . DECIMAL
  122                               | . HEX
  123                               | . FLOATING_POINT
  124                               | . STRING_LITERAL
  125                               | . array_access
  126                               | . field_access
  127                               | . subprogram_call
  128 array_access: . qualified_name L_SQ_PAREN expression R_SQ_PAREN
  129             | . complex_primary L_SQ_PAREN expression R_SQ_PAREN
  130 field_access: . not_just_name DOT IDENTIFIER
  131             | . postfix_expression DOT IDENTIFIER
  132 subprogram_call: . subprogram_access L_PAREN argument_list R_PAREN
  133                | . subprogram_access L_PAREN R_PAREN
  134 subprogram_access: . complex_primary_no_parenthesis
  135                  | . qualified_name
